<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/idPersonaLista"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/idhint"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/namePersonaLista"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/nameEditText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/passwordPersonaLista"
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/passwordHint"
        android:textSize="16sp" />

</LinearLayout>